Bug 414252 - SDDM breeze theme can not be loaded: StackView is not a type
Summary: SDDM breeze theme can not be loaded: StackView is not a type
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-11-18 06:42 UTC by Luca Beltrame
Modified: 2019-11-18 13:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Luca Beltrame 2019-11-18 06:42:31 UTC
SUMMARY

Something seems to have changed in the components used by the SDDM theme in current Plasma master. 

When starting the greeter, and also in test mode, I get:

[07:36:07.270] (WW) GREETER: file:///usr/share/sddm/themes/breeze/Main.qml:151:9: StackView is not a type 
             StackView { 
             ^
[07:36:07.270] (WW) GREETER: file:///usr/share/sddm/themes/breeze/Main.qml:151:9: StackView is not a type 
             StackView { 

It doesn't look like it is a recent change (a search through the git log shows nothing useful), however, so I'm unsure of the cause. 

STEPS TO REPRODUCE
1. Load the SDDM theme with testing mode: sddm-greeter --test-mode <path to checked out plasma-workspace sources>/sddm-theme

OBSERVED RESULT

SDDM falls back to the embedded theme with the error shown above.

EXPECTED RESULT

Breeze theme for SDDM should load.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: latest master
KDE Plasma Version: latest master
KDE Frameworks Version: latest master
Qt Version: 5.13.1
Comment 1 Luca Beltrame 2019-11-18 06:52:03 UTC
It looks to me that an import was changed from implicit "import QtQuickControls 2.0" as explicit "import QtQuickControls 2.0 as QQC2" without changing everything else in b7b25010aa58c6366c8182c886d5daae496bab42.
Comment 2 Luca Beltrame 2019-11-18 06:57:53 UTC
Git commit 47c76ebc83ee1f96c7a5fd9be23c6234a93143e8 by Luca Beltrame.
Committed on 18/11/2019 at 06:55.
Pushed by lbeltrame into branch 'master'.

Unbreak SDDM theme loading

In b7b25010aa58c6366c8182c886d5daae496bab42 the import line was changed
but nothing else was, causing errors in QML loading which ultimately
prevented SDDM from loading the theme.
CCMAIL: i@guoyunhe.me

M  +1    -1    sddm-theme/Main.qml

https://commits.kde.org/plasma-workspace/47c76ebc83ee1f96c7a5fd9be23c6234a93143e8
Comment 3 Dag Andersen 2019-11-18 13:16:20 UTC
Git commit 092f120660b89593b7cd9c20404b50df9a473689 by Dag Andersen.
Committed on 18/11/2019 at 13:02.
Pushed by danders into branch '3.2'.

PlanWork: Bug 414253 - Actual effort editable in list view
FIXED-IN: 3.2.1

M  +2    -2    src/workpackage/taskworkpackagemodel.cpp

https://commits.kde.org/calligraplan/092f120660b89593b7cd9c20404b50df9a473689
Comment 4 Dag Andersen 2019-11-18 13:18:21 UTC
Git commit de5c9d83d2fbf54fe47e2161ce3c66e804e7e186 by Dag Andersen.
Committed on 18/11/2019 at 13:17.
Pushed by danders into branch 'master'.

PlanWork: Bug 414253 - Actual effort editable in list view
FIXED-IN: 3.2.1

M  +2    -2    src/workpackage/taskworkpackagemodel.cpp

https://commits.kde.org/calligraplan/de5c9d83d2fbf54fe47e2161ce3c66e804e7e186