PlanWork: Bug 414253 - Actual effort editable in list view

BUG: 414252
FIXED-IN: 3.2.1